[package]
name = "financial-modeling-prep-api"
version = "0.0.1"
author = ["sadminriley"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.12.4", features = ["blocking"] }


[[bin]]
edition = "2021"
name = "rusty-stock-cli"
path = "src/main.rs"


[workspace]
members = [
    "."
]